Primeiras implentações, tela de login

--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -8,12 +8,21 @@
             </i>
             Início
         </a>
+
+        <a mat-list-item routerLink="/login">
+            <i class="material-icons">
+                login
+            </i>
+            Login
+        </a>
+
         <a mat-list-item routerLink="/products">
             <i class="material-icons">
                 storefront
             </i>
             Produtos
         </a>
+
     </mat-nav-list>
 </mat-sidenav>
 <mat-sidenav-content class="content">
