--- a/frontend/src/app/components/template/header/header.component.css
+++ b/frontend/src/app/components/template/header/header.component.css
@@ -1,24 +1,23 @@
 .header {
-    display: flex;
-    align-items: center;
-
+    background-color: #3f51b5;
+    height: 20%;
+    flex-direction: row;
+    color: #fff;
+    text-shadow: 0 0 4px rgb(0, 0, 0);
+    padding-right: 135%;
 }
 
 .header a {
     display: flex;
     align-items: center;
     text-decoration: none;
+    margin-right: 10%;
 }
 
 .header .logo {
-    max-height: 60px;
+    margin-left: 0%;
+    margin-right: 5%;
+    max-height: 8rem;
 }
 
-.header .title-group{
-    padding-left: 25px;
 
-}
-
-.header .title-group i {
-    padding-right: 5px;
-}
