--- a/frontend/src/app/views/home/home.component.html
+++ b/frontend/src/app/views/home/home.component.html
@@ -6,3 +6,10 @@
         Agendamento de serviços
     </mat-card-subtitle>
 </mat-card>
+<mat-grid-list cols="2" rowHeight="2:1">
+    <mat-grid-tile>1</mat-grid-tile>
+    <mat-grid-tile>2</mat-grid-tile>
+    <mat-grid-tile>3</mat-grid-tile>
+    <mat-grid-tile>4</mat-grid-tile>
+  </mat-grid-list>
+
