--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
-<app-nav></app-nav>
+<router-outlet></router-outlet>
+<!-- <app-nav></app-nav> -->
 <app-footer></app-footer>
