--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,12 +1,41 @@
 <mat-toolbar class="header mat-elevation-z8">
-        <span>
-            <a routerLink="/">
-                <img class="logo" src="./assets/img/bootcampAvanade.png" alt="logo">
-            </a>
-        </span>
-        <span class="title-group">
-            <a>
-                <h1>Studio Nova Brasil</h1>
-            </a>
-        </span> 
+        <div>
+            <span class="left">
+                <a routerLink="/">
+                    <img class="logo" src="./assets/img/logoNovaBrasil.jpg" alt="logo">
+                </a>
+            </span>
+            <span class="title-group">
+                <a>
+                    <h1>Studio Nova Brasil</h1>
+                </a>
+            </span> 
+        </div>
+        <div>
+            <mat-nav-list class="nav-list">
+                <a mat-list-item routerLink="/">
+                    <i class="material-icons">
+                        home
+                    </i>
+                    Início
+                </a>
+        
+                <a mat-list-item routerLink="/login">
+                    <i class="material-icons">
+                        login
+                    </i>
+                    Login
+                </a>
+        
+                <a mat-list-item routerLink="/products">
+                    <i class="material-icons">
+                        storefront
+                    </i>
+                    Produtos
+                </a>
+        
+            </mat-nav-list>
+        </div>
+        
 </mat-toolbar>
+
