--- a/frontend/src/app/views/login/login.component.css
+++ b/frontend/src/app/views/login/login.component.css
@@ -12,3 +12,21 @@ label {
     background-color: rgb(92, 110, 213);
     color: #fff;
 }
+
+.example-container .mat-form-field + .mat-form-field {
+    margin-left: 8px;
+  }
+  
+  .example-right-align {
+    text-align: right;
+  }
+  
+  input.example-right-align::-webkit-outer-spin-button,
+  input.example-right-align::-webkit-inner-spin-button {
+    display: none;
+  }
+  
+  input.example-right-align {
+    -moz-appearance: textfield;
+  }
+  
