Header novo layout

--- a/frontend/src/app/views/home/home.component.html
+++ b/frontend/src/app/views/home/home.component.html
@@ -1,4 +1,4 @@
-<mat-card class="home mat-elevation-z5" >
+<!-- <mat-card class="home mat-elevation-z5" >
     <mat-card-title class="title"> 
          Bem Vindo! 
     </mat-card-title>
@@ -12,4 +12,4 @@
     <mat-grid-tile>3</mat-grid-tile>
     <mat-grid-tile>4</mat-grid-tile>
   </mat-grid-list>
-
+ -->
