--- a/frontend/src/app/components/template/header/header.component.css
+++ b/frontend/src/app/components/template/header/header.component.css
@@ -1,35 +1,35 @@
 .header {
-    background-color: #3f51b5;
-    height: 20%;;
-    flex-direction: row;
-    color: #fff;
-    text-shadow: 0 0 4px rgb(0, 0, 0);
-    padding-right: 135%;
-    text-align: center;
+    background-color: #414a4c;
     display: flex;
-    width: 100%;
-}
-
-.header a {
-    display: flex;
+    justify-content: space-between;
+    padding: 5px 17px;
     align-items: center;
-    text-decoration: none;
-    margin-right: 10%;
-    padding: 10px;
 }
 
-.header .logo {
-    margin-left: 0%;
-    margin-right: 5%;
-    max-height: 5rem;
-    border-radius: 50%;
-    padding: 10px;
+.header_container img {
+    width: 60px;
+    border: 1px solid;
+    border-radius: 999%;
+    box-shadow: 0px 0px 7px lightgray;
 }
 
-.right{
-    text-align:end;
+.header_container ul {
+    display: flex;
+    list-style: none;
 }
 
+.header_container ul li{
+    margin: 0 10px;
+}
+/* .header_btn{
+    color: white;
+    background-color: #353839;
+} */
 
+.header_btn button{
+    color: white;
+    background-color: #353839;
+    box-shadow: 0px 0px 7px lightgray;
+}
 
 
