--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,41 +1,13 @@
-<mat-toolbar class="header mat-elevation-z8">
-        <div>
-            <span class="left">
-                <a routerLink="/">
-                    <img class="logo" src="./assets/img/logoNovaBrasil.jpg" alt="logo">
-                </a>
-            </span>
-            <span class="title-group">
-                <a>
-                    <h1>Studio Nova Brasil</h1>
-                </a>
-            </span> 
-        </div>
-        <div>
-            <mat-nav-list class="nav-list">
-                <a mat-list-item routerLink="/">
-                    <i class="material-icons">
-                        home
-                    </i>
-                    Início
-                </a>
-        
-                <a mat-list-item routerLink="/login">
-                    <i class="material-icons">
-                        login
-                    </i>
-                    Login
-                </a>
-        
-                <a mat-list-item routerLink="/products">
-                    <i class="material-icons">
-                        storefront
-                    </i>
-                    Produtos
-                </a>
-        
-            </mat-nav-list>
-        </div>
-        
-</mat-toolbar>
+<div class="header">
 
+    <div class="header_container">
+        <img src="../../../../assets/img/logoNovaBrasil.jpg" alt="logo studio nova Brasil">
+    </div>
+    <div class="header_container">
+        <ul>
+            <li class="header_btn"><button mat-raised-button>Basic</button></li>
+            <li class="header_btn"><button mat-raised-button>Servicos</button></li>
+            <li class="header_btn"><button mat-raised-button>Entrar</button></li>
+        </ul>
+    </div>
+</div>
