--- a/frontend/src/app/components/template/footer/footer.component.css
+++ b/frontend/src/app/components/template/footer/footer.component.css
@@ -1,7 +1,7 @@
 .footer {
     position: fixed;
     bottom: 0;
-
+    background-color: #414a4c;
     display: flex;
     justify-content: flex-end;
 
