--- a/frontend/src/app/views/home/home.component.html
+++ b/frontend/src/app/views/home/home.component.html
@@ -1,15 +1,3 @@
-<!-- <mat-card class="home mat-elevation-z5" >
-    <mat-card-title class="title"> 
-         Bem Vindo! 
-    </mat-card-title>
-    <mat-card-subtitle class="subtitle">
-        Agendamento de serviços
-    </mat-card-subtitle>
-</mat-card>
-<mat-grid-list cols="2" rowHeight="2:1">
-    <mat-grid-tile>1</mat-grid-tile>
-    <mat-grid-tile>2</mat-grid-tile>
-    <mat-grid-tile>3</mat-grid-tile>
-    <mat-grid-tile>4</mat-grid-tile>
-  </mat-grid-list>
- -->
+<div class="container">
+    <h1>Seja Bem vindo!</h1>
+</div>
